--- a/notebook/LGBM.ipynb
+++ b/notebook/LGBM.ipynb
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1069,9 +1069,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Encode Variables\n",
+      "Encoding : ['user_id', 'region', 'city', 'parent_category_name', 'category_name', 'user_type', 'image_top_1', 'param_1', 'param_2', 'param_3']\n",
+      "\n",
+      "Text Features\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"\\nEncode Variables\")\n",
     "categorical = [\"user_id\",\"region\",\"city\",\"parent_category_name\",\"category_name\",\"user_type\",\"image_top_1\",\"param_1\",\"param_2\",\"param_3\"]\n",
@@ -1088,9 +1100,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[TF-IDF] Term Frequency Inverse Document Frequency Stage\n"
+     ]
+    }
+   ],
    "source": [
     "# Feature Engineering \n",
     "\n",
@@ -1128,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1150,9 +1171,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 2011862 entries, b912c3c6a6ad to d374d332992f\n",
+      "Data columns (total 24 columns):\n",
+      "user_id                         int64\n",
+      "region                          int64\n",
+      "city                            int64\n",
+      "parent_category_name            int64\n",
+      "category_name                   int64\n",
+      "param_1                         int64\n",
+      "param_2                         int64\n",
+      "param_3                         int64\n",
+      "title                           object\n",
+      "description                     object\n",
+      "price                           float64\n",
+      "item_seq_number                 int64\n",
+      "user_type                       int64\n",
+      "image_top_1                     int64\n",
+      "Weekday                         int64\n",
+      "user_post_num                   int64\n",
+      "avg_red                         float64\n",
+      "desc_punc                       int64\n",
+      "description_num_words           int64\n",
+      "description_num_unique_words    int64\n",
+      "description_words_vs_unique     float64\n",
+      "title_num_words                 int64\n",
+      "title_num_unique_words          int64\n",
+      "title_words_vs_unique           float64\n",
+      "dtypes: float64(4), int64(18), object(2)\n",
+      "memory usage: 383.7+ MB\n"
+     ]
+    }
+   ],
    "source": [
     "df.info()"
    ]
